--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,11 @@ build/
 .vscode/
 
 
-application.properties
+# Ignore main application.properties (may contain secrets)
+src/main/resources/application.properties
+
+# But allow test application.properties (needed for tests)
+!src/test/resources/application.properties
 
 
 
