--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,3 @@
-de.flapdoodle.mongodb.embedded.version=7.0.4
+openai.base-url=https://api.openai.com/v1
+openai.api-key=${OPENAI_API_KEY:dummy-openai-placeholder}
+openai.autocorrect-enabled=false
