--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=recap4
 spring.data.mongodb.uri=${MONGODB_URI}
 
-openai.base-url=${OPENAI_BASE_URL:https://api.openai.com/v1}
-openai.api-key=${OPENAI_API_KEY:dummy-openai-placeholder}
+openai.base-url=https://api.openai.com/v1
+openai.api-key=${OPENAI_API_KEY}
 openai.autocorrect-enabled=true
