--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,3 @@
 openai.base-url=https://api.openai.com/v1
-openai.api-key=${OPENAI_API_KEY:dummy-openai-placeholder}
+openai.api-key=dummy-openai-placeholder
 openai.autocorrect-enabled=false
